# Turn_systems_Sidewalk

./: .gitignore  README.md
doc/: compatibility_matrix.rst
doc/testing_samples/: samples.rst  samples_list.rst
doc/testing_samples/sidewalk_application_samples/: testing_sample_include.txt
samples/: Turn_workspace.code-workspace
samples/template_ble/: CMakeLists.txt  prj.conf  version.conf
samples/template_ble/boards/: nrf52840dk_nrf52840.overlay
samples/template_ble/include/: application_thread.h  board_events.h  u_adc_turn.h  u_app_timers.h  u_app_turn.h  u_buzzer_turn.h  u_esp32_turn.h  u_i2c_turn.h  u_led_turn.h  u_nfc_turn.h  u_spi_turn.h  u_uart_turn.h
samples/template_ble/src/: application_thread.c  board_events.c  main.c  sidewalk_callbacks.c  u_adc_turn.c  u_app_timers.c  u_app_turn.c  u_buzzer_turn.c  u_esp32_turn.c  u_i2c_turn.c  u_led_turn.c  u_nfc_turn.c  u_sidewalk_turn.c  u_spi_turn.c  u_uart_turn.c
tests/unit_tests/pal_temperature/: prj.conf
tools/aws-iot-core-for-sidewalk/: config.yaml
tools/aws-iot-core-for-sidewalk/EdgeDeviceProvisioning/tools/provision/: certificate.json  nordic_aws_nrf52840.hex
